# flashinfer-bench-starter-kit

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
my_scripts/: build.sh  deepSeekV3_moe.py  integrated_moe_kernel.py  verify_integrated_moe.py
solution/cuda/: moe_dispatch.cu  moe_ffi.cu  moe_routing.cu  moe_scan.cu
solution/cuda/include/: utils.cuh
solution/cuda/moe_expert_mlp/: Makefile  README.md  kernel4.cu  kernel4.cuh  kernel4_backends.cu  kernel4_cpu_reference.cu  kernel4_cuda_kernels.cu  kernel4_cutlass.cu  kernel4_internal.cuh  kernel6.cu  kernel6.cuh  kernel6_backends.cu  kernel6_cpu_reference.cu  kernel6_cuda_kernels.cu  kernel6_cutlass.cu  kernel6_internal.cuh
solution/cuda/moe_expert_mlp/.build/: kernel4_test_fallback
